commented out the third article so it matches the original wire frame

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -31,12 +31,12 @@
               <p>Cloning is the process of creating a local copy of a remote repository on your computer. This lets you work on the code offline and push your changes back to the repository when you're ready.</p>
               <a href="#">Read More</a>
           </article>
-          <article class="article">
+          <!-- <article class="article">
               <img src="images/branch.webp" alt="Branching in Git" class="article-image">
               <h2>Branch</h2>
               <p>Branches allow you to develop features, fix bugs, or experiment without affecting the main codebase. Learn how to create, switch, and manage branches in Git to streamline your development workflow.</p>
               <a href="#">Read More</a>
-          </article>
+          </article> -->
       </section>
     </main>
 
