--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git and GitHub Fundamentals</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   </head>
   <body>
   <!-- Add your HTML markup here -->
@@ -42,36 +44,36 @@
 
     <footer>
        <div class="footer-container">
-          <!-- Social Links Column -->
-          <div class="footer-column footer-social">
-            <h3>Follow Us</h3>
-            <a href="https://github.com/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-            <a href="https://instagram.com/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-          </div>
+            <!-- Social Links Column -->
+            <div class="footer-column footer-social">
+              <h3>Follow Us</h3>
+              <a href="https://github.com/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+              <a href="https://instagram.com/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+              <a href="https://facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://twitter.com/" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            </div>
 
-          <!-- Sign-up Form Column -->
-          <div class="footer-column footer-signup">
-            <h3>Subscribe</h3>
-            <p>Subscribe to our newsletter</p>
-            <form action="#" method="post">
-                <input type="email" placeholder="Enter your email" required>
-                <button type="submit">Sign Up</button>
-            </form>
-          </div>
+            <!-- Sign-up Form Column -->
+            <div class="footer-column footer-signup">
+              <h3>Subscribe</h3>
+              <p>Subscribe to our newsletter</p>
+              <form action="#" method="post">
+                  <input type="email" placeholder="Enter your email" required>
+                  <button type="submit">Sign Up</button>
+              </form>
+            </div>
 
-          <!-- Footer Links Column -->
-          <div class="footer-column footer-links">
-            <h3>Quick Links</h3>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#contact">Contact</a>
-            <a href="#privacy">Privacy Policy</a>
+            <!-- Footer Links Column -->
+            <div class="footer-column footer-links">
+              <h3>Quick Links</h3>
+              <a href="#about">About</a>
+              <a href="#services">Services</a>
+              <a href="#contact">Contact</a>
+              <a href="#privacy">Privacy Policy</a>
+            </div>
           </div>
-
-          <p>&copy; 2024 YourWebsiteName. All rights reserved.</p>
-      </div>
+          <p>&copy; Git and Github Fundamentals. All rights reserved.</p>
+  
     </footer>
 
  </body>
