updated the html form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,15 +14,57 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+    <div>
+      <label> Name
+      <input required type="text" placeholder="Bereket Hayelom">
+      </label>
+  </div>
+  <br>
+  <div> 
+      <label> Email
+      <input required type="email" placeholder="bereket@example.com">
+      </label>
+  </div>
+  <br>
+  <div> 
+    <label> color
+    <select name="tshirt-color" id="tshirt-color">
+      <option value="">black</option>
+      <option value="">green</option>
+      <option value="">blue</option>
+    </select>
+    </label>
+</div>
+<br>
+  <div> 
+    <label> Size
+    <select name="select" id="selct">
+      <option value="">xs</option>
+      <option value="">s</option>
+      <option value="">m</option>
+      <option value="">l</option>
+      <option value="">xl</option>
+      <option value="">xxl</option>
+    </select> 
+    </label>
+  </div> 
+  <br> 
+  <div> 
+    <label> Delivery Date
+    <input required type="date">
+    </label>
+    <p >
+    Please select a date within the next 4 weeks! 
+    </p>
+  </div>
+  <br>
+  
+   <button>submit</button>
+  
   </form>
-
   </main>
   <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Emmanuel</h2>
   </footer>
 </body>
-
 </html>
