date input element updated to have min and max set dynamically

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -58,7 +58,7 @@
 
           <div>
             <label for="delivery-date">Delivery Date</label>
-            <input type="date" id="delivery-date" max="2024-11-12" required />
+            <input type="date" id="delivery-date" min="" max="2024-11-12" required />
           </div>
 
           <button class="btn" type="submit">Submit</button>
@@ -68,5 +68,6 @@
     <footer class="footer">
       <h2 class="footer-title">By Rashaad Ebrahim</h2>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
