--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,7 +13,7 @@
     <h1>Product Pick</h1>
   </header>
   <main>
-  
+  <form>
    <fieldset> 
     <legend><h2>Customer Information</h2></legend>
     <div class="c-information">
