--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,7 +15,7 @@
     <h1>Product Cart</h1>
   </header>
   <main>
-    <form method="post">
+    <form>
       <!-- write your html here-->
       <!-- try writing out the requirements first-->
       <div>
@@ -29,7 +29,7 @@
 
       <div>
         <label for="email">Email Address</label>
-        <input type="email" id="email" placeholder="Enter your email address"  required>
+        <input type="email" id="email" name="email" placeholder="Enter your email address"  required>
       </div>
 
       <div>
@@ -42,10 +42,10 @@
         </select>
       </div>
       <div>
-        <label for="color">Size</label>
+        <label for="size">Size</label>
         <select id="size" name="size" required>
           <option value="" disabled selected>Select a size</option>
-          <option value="XS">ES</option>
+          <option value="ES">ES</option>
           <option value="S">S</option>
           <option value="M">M</option>
           <option value="L">L</option>
@@ -56,11 +56,11 @@
 
       <div>
         <label for="datepicker">Delivery date</label>
-        <input type="date" id="datepicker" min="2024-11-02" max="2024-11-09" required>
+        <input type="date" id="datepicker" name="datepicker" min="2024-11-02" max="2024-11-09" required>
       </div>
 
       <div id="btn-align">
-        <INPUT type="submit" value="Send" class="button"> <INPUT type="reset" class="button">
+        <input type="submit" value="Send" class="button" id="btn-space"> <input type="reset" class="button">
       </div>
     </form>
   </main>
