Change footer position to sticky footer to the bottom

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="wrapper">
     <header>
       <h1>Product Pick</h1>
     </header>
@@ -90,5 +91,6 @@
       >
       with love 🤍
     </footer>
+  </div>
   </body>
 </html>
