--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,14 +12,13 @@
       <p>Git is a popular version control system and GitHub is the largest host of source code in the world.</p>
     </header>
     <main>
-      <section class="article_f">
-        
+      <!-- First Section -->
+      <section>
         <!-- First Article -->
-        <article>
+        <article class="art1">
           <img src="image/Git-art1.png" alt="Git and GitHub image" >
           <h2>What is Git?</h2>
           <p>Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.</p>
-
           <ul>It is used for:
             <li>Tracking code changes</li>
             <li>Tracking who made changes</li>
@@ -30,9 +29,10 @@
           </button>
         </article>
       </section>
-        <!-- Second Article -->
+      <!-- Second Section -->
       <section>
-        <article>
+         <!-- Second Article -->
+        <article class="art2">
                 <img src="image/Git-art2.jpg" alt="developers need Git" >
             <h2>Why do developers need Git?</h2>
             <p>One of the biggest advantages of Git is its branching capabilities. Unlike centralized version control systems, Git branches are cheap and easy to merge. This facilitates the feature branch workflow popular with many Git users. Feature branches provide an isolated environment for every change to your codebase.</p>
@@ -41,7 +41,7 @@
             </button>
         </article>
         <!-- Third Article -->
-        <article>
+        <article class="art3">
           <img src="image/Git-art3.png" alt="Why Git?" >
           <h2>What is a branch in Git?</h2>
           <p>A branch in Git is a separate line of development, allowing developers to work on new features or bug fixes without affecting the main project. It creates an independent environment to test and implement changes. Once the changes are ready, branches can be merged back into the main codebase, helping to isolate and manage different tasks or versions of the project.</p>
@@ -49,9 +49,7 @@
             <a href="https://www.getdbt.com/analytics-engineering/transformation/git-workflow" target="_blank">Read More</a>
           </button>
         </article>
-
       </section>
-
     </main>
 
     <footer>
