--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,7 +16,7 @@
     <main>
       <form>
         <div class="form_name-block">
-          <label class="label-name" for="customerName">Enter your name</label>
+          <label class="label-name" for="customerName">Enter your name <span class="asterisk">*</span></label>
           <input
             class="input-name"
             type="text"
@@ -30,7 +30,7 @@
         </div>
 
         <div class="form_email-block">
-          <label for="customerEmail" class="label-email">Enter your email</label>
+          <label for="customerEmail" class="label-email">Enter your email <span class="asterisk">*</span></label>
           <input
             type="email"
             id="customerEmail"
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form_color-block">
-          <h3>What color of T-shirt would you like to order?</h3>
+          <h3>What color of T-shirt would you like to order? <span class="asterisk">*</span></h3>
           <div>            
             <input type="radio" name="productColor" id="redColor" value="redColor" required/>
             <label class="form_label-red" for="redColor">Red</label>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form_size-block">
-          <label for="productSize">What size of T-shirt would you like to order?</label>
+          <label for="productSize">What size of T-shirt would you like to order? <span class="asterisk">*</span></label>
           <select name="productSize" id="productSize" required>
             <option value="" disabled selected>Select your size</option>
             <option value="XS">XS</option>
@@ -71,7 +71,7 @@
         </div>
 
         <div class="form_date-block">
-          <label for="deliveryDate">When do you want the t-shirt to be delivered?</label>
+          <label for="deliveryDate">When do you want the t-shirt to be delivered? <span class="asterisk">*</span></label>
           <input type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14" max="2024-11-14" required>
         </div>
 
