Add styles for labels

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form_size-block">
-          <label for="productSize">What size of T-shirt would you like to order? <span class="asterisk">*</span></label>
+          <label for="productSize" class="label-size">What size of T-shirt would you like to order? <span class="asterisk">*</span></label>
           <select name="productSize" id="productSize" required>
             <option value="" disabled selected>Select your size</option>
             <option value="XS">XS</option>
@@ -71,7 +71,7 @@
         </div>
 
         <div class="form_date-block">
-          <label for="deliveryDate">When do you want the t-shirt to be delivered? <span class="asterisk">*</span></label>
+          <label for="deliveryDate" class="label-date">When do you want the t-shirt to be delivered? <span class="asterisk">*</span></label>
           <input type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14" max="2024-11-14" required>
         </div>
 
