Add margins for labels

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form_color-block">
-          <h3>What color of T-shirt would you like to order? <span class="asterisk">*</span></h3>
+          <label class="label-color">What color of T-shirt would you like to order? <span class="asterisk">*</span></label>
           <div>            
             <input type="radio" name="productColor" id="redColor" value="redColor" required/>
             <label class="form_label-red" for="redColor">Red</label>
