Change width for fields

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -31,7 +31,7 @@
 
         <div class="form_email-block">
           <label for="customerEmail" class="label-email">Enter your email <span class="asterisk">*</span></label>
-          <input
+          <input class="input-email"
             type="email"
             id="customerEmail"
             name="customerEmail"
@@ -72,7 +72,7 @@
 
         <div class="form_date-block">
           <label for="deliveryDate" class="label-date">When do you want the t-shirt to be delivered? <span class="asterisk">*</span></label>
-          <input type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14" max="2024-11-14" required>
+          <input class="input-date" type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14" max="2024-11-14" required>
         </div>
 
         <button type="reset">Reset</button>
