Change width for form elements

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -45,15 +45,15 @@
           <label class="label-color">What color of T-shirt would you like to order? <span class="asterisk">*</span></label>
           <div>            
             <input type="radio" name="productColor" id="redColor" value="redColor" required/>
-            <label class="form_label-red" for="redColor">Red</label>
+            <label class="label-red" for="redColor">Red</label>
           </div>
           <div>            
             <input type="radio" name="productColor" id="redBLue" value="redBLue" required/>
-            <label class="form_label-blue" for="redBLue">Blue</label>
+            <label class="label-blue" for="redBLue">Blue</label>
           </div>
           <div>            
             <input type="radio" name="productColor" id="greenColor" value="greenColor" required/>
-            <label class="form_label-green" for="greenColor">Green</label>
+            <label class="label-green" for="greenColor">Green</label>
           </div>
         </div>
 
@@ -75,9 +75,9 @@
           <input class="input-date" type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14" max="2024-11-14" required>
         </div>
 
-        <button type="reset">Reset</button>
+        <button class="reset" type="reset">Reset</button>
 
-        <button type="submit">Submit</button>
+        <button class="submit" type="submit">Submit</button>
       </form>
     </main>
     <footer>
