Add media queries

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -12,6 +12,7 @@
     <div class="wrapper">
     <header>
       <h1>Product Pick</h1>
+      <h2>Please choose your desired product by filling out the form</h2>
     </header>
     <main>
       <form>
