--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -4,94 +4,133 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>My form exercise</title>
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Buy T-shirts online. Pick your size and color, and get fast delivery. Order now."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="wrapper">
-    <header>
-      <h1>Product Pick</h1>
-      <h2>Please choose your desired product by filling out the form</h2>
-    </header>
-    <main>
-      <form>
-        <div class="form_name-block">
-          <label class="label-name" for="customerName">Enter your name <span class="asterisk">*</span></label>
-          <input
-            class="input-name"
-            type="text"
-            id="customerName"
-            name="customerName"
-            pattern="[A-Za-zÀ-ž\s'-]{2,30}"
-            placeholder="Enter your name"
-            title="A valid name consists of 2-30 characters and only letters." minlength="2"
-            required
-          />
-        </div>
-
-        <div class="form_email-block">
-          <label for="customerEmail" class="label-email">Enter your email <span class="asterisk">*</span></label>
-          <input class="input-email"
-            type="email"
-            id="customerEmail"
-            name="customerEmail"
-            placeholder="Enter your email"
-            title="Please enter a valid email address (e.g., example@domain.com)."
-            pattern="/^[\w]{1,}[\w.+-]{0,}@[\w-]{2,}([.][a-zA-Z]{2,}|[.][\w-]{2,}[.][a-zA-Z]{2,})$/g"
-            required/>
-        </div>
-
-        <div class="form_color-block">
-          <label class="label-color">What color of T-shirt would you like to order? <span class="asterisk">*</span></label>
-          <div>            
-            <input type="radio" name="productColor" id="redColor" value="redColor" required/>
-            <label class="label-red" for="redColor">Red</label>
+      <header>
+        <h1>Product Pick</h1>
+        <h2>Please choose your desired product by filling out the form</h2>
+      </header>
+      <main>
+        <form>
+          <div class="form_name-block">
+            <label class="label-name" for="customerName"
+              >Enter your name <span class="asterisk">*</span></label
+            >
+            <input
+              class="input-name"
+              type="text"
+              id="customerName"
+              name="customerName"
+              pattern="[A-Za-zÀ-ž\s'-]{2,30}"
+              placeholder="Enter your name"
+              title="A valid name consists of 2-30 characters and only letters."
+              minlength="2"
+              required
+            />
           </div>
-          <div>            
-            <input type="radio" name="productColor" id="redBLue" value="redBLue" required/>
-            <label class="label-blue" for="redBLue">Blue</label>
+          <div class="form_email-block">
+            <label for="customerEmail" class="label-email"
+              >Enter your email <span class="asterisk">*</span></label
+            >
+            <input
+              class="input-email"
+              type="email"
+              id="customerEmail"
+              name="customerEmail"
+              placeholder="Enter your email"
+              title="Please enter a valid email address (e.g., example@domain.com)."
+              pattern="/^[\w]{1,}[\w.+-]{0,}@[\w-]{2,}([.][a-zA-Z]{2,}|[.][\w-]{2,}[.][a-zA-Z]{2,})$/g"
+              required
+            />
           </div>
-          <div>            
-            <input type="radio" name="productColor" id="greenColor" value="greenColor" required/>
-            <label class="label-green" for="greenColor">Green</label>
+          <div class="form_color-block">
+            <label class="label-color"
+              >What color of T-shirt would you like to order?
+              <span class="asterisk">*</span></label
+            >
+            <div>
+              <input
+                type="radio"
+                name="productColor"
+                id="redColor"
+                value="redColor"
+                required
+              />
+              <label class="label-red" for="redColor">Red</label>
+            </div>
+            <div>
+              <input
+                type="radio"
+                name="productColor"
+                id="redBLue"
+                value="redBLue"
+                required
+              />
+              <label class="label-blue" for="redBLue">Blue</label>
+            </div>
+            <div>
+              <input
+                type="radio"
+                name="productColor"
+                id="greenColor"
+                value="greenColor"
+                required
+              />
+              <label class="label-green" for="greenColor">Green</label>
+            </div>
           </div>
-        </div>
-
-        <div class="form_size-block">
-          <label for="productSize" class="label-size">What size of T-shirt would you like to order? <span class="asterisk">*</span></label>
-          <select name="productSize" id="productSize" required>
-            <option value="" disabled selected>Select your size</option>
-            <option value="XS">XS</option>
-            <option value="S">S</option>
-            <option value="M">M</option>
-            <option value="M">L</option>
-            <option value="M">XL</option>
-            <option value="M">XXL</option>
-          </select>
-        </div>
-
-        <div class="form_date-block">
-          <label for="deliveryDate" class="label-date">When do you want the t-shirt to be delivered? <span class="asterisk">*</span></label>
-          <input class="input-date" type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14" max="2024-11-14" required>
-        </div>
-
-        <button class="reset" type="reset">Reset</button>
-
-        <button class="submit" type="submit">Submit</button>
-      </form>
-    </main>
-    <footer>
-      &copy; Copyright - 2024. Created by
-      <a
-        href="https://github.com/nadika-zavodovska"
-        target="_blank"
-        class="copyright_link"
-        aria-label="Open github of author's of website"
-        >Nadika</a
-      >
-      with love 🤍
-    </footer>
-  </div>
+          <div class="form_size-block">
+            <label for="productSize" class="label-size"
+              >What size of T-shirt would you like to order?
+              <span class="asterisk">*</span></label
+            >
+            <select name="productSize" id="productSize" required>
+              <option value="" disabled selected>Select your size</option>
+              <option value="XS">XS</option>
+              <option value="S">S</option>
+              <option value="M">M</option>
+              <option value="M">L</option>
+              <option value="M">XL</option>
+              <option value="M">XXL</option>
+            </select>
+          </div>
+          <div class="form_date-block">
+            <label for="deliveryDate" class="label-date"
+              >When do you want the t-shirt to be delivered?
+              <span class="asterisk">*</span></label
+            >
+            <input
+              class="input-date"
+              type="date"
+              id="deliveryDate"
+              name="deliveryDate"
+              min="2024-10-14"
+              max="2024-11-14"
+              required
+            />
+          </div>
+          <button class="reset" type="reset">Reset</button>
+          <button class="submit" type="submit">Submit</button>
+        </form>
+      </main>
+      <footer>
+        &copy; Copyright - 2024. Created by
+        <a
+          href="https://github.com/nadika-zavodovska"
+          target="_blank"
+          class="copyright_link"
+          aria-label="Open github of author's of website"
+          >Nadika</a
+        >
+        with love 🤍
+      </footer>
+    </div>
   </body>
 </html>
