--- a/Cakes-Co/index.html
+++ b/Cakes-Co/index.html
@@ -49,9 +49,32 @@
       </section>
     </main>
 
-    <!-- Add your markup here -->
-    <!-- Add your markup here -->
-    <!-- Add your markup here -->
-    <!-- Add your markup here -->
+     <!-- Services Section -->
+  <section id="services">
+    <h2>Our Services</h2>
+    <p>we offer a wide range of flavors and designs to suit your needs.</p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 Delicious Cakes. All rights reserved.</p>
+  </footer>
   </body>
 </html>
