Remove Extra CSS Selector
Removing the extra CSS selector and replacing it with attribute gap to separate the buttons.

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -60,7 +60,7 @@
       </div>
 
       <div id="btn-align">
-        <input type="submit" value="Send" class="button" id="btn-space"> <input type="reset" class="button">
+        <input type="submit" value="Send" class="button"> <input type="reset" class="button">
       </div>
     </form>
   </main>
