--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -87,5 +87,8 @@
         </summary>
       </section>
     </div>
-    </body>
+    <div class="footer">
+      <p>Created by Saqib Javed | London 11 | ITP</p>
+    </div>
+  </body>
 </html
