added images to articles

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -18,6 +18,7 @@
       </header>
 
       <section class="article1">
+        <img class="article1_img" src="/Wireframe/git2.png">
         <h2>What is Git?</h2>
         <p>
           Git is a free and open source distributed version control system
@@ -32,7 +33,8 @@
       </section>
 
       <div class="section-container">
-        <section class="article">
+          <section class="article">
+            <img class="article2_img" src="/Wireframe/git1.png">
           <h2>Why do Developers need Git?</h2>
           <p>
             Git is all about efficiency. For developers, it eliminates
@@ -48,6 +50,7 @@
           
         </section>
         <section class="article">
+          <img class="article3_img" src="/Wireframe/git3.png">
           <h2>What is a branch in Git?</h2>
           <p>
             Git branches are effectively a pointer to a snapshot of your
@@ -65,6 +68,7 @@
         </section>
       </div>
     </main>
+    <br><br><br><br><br><br><br><br><br><br><br><br>
     <footer class="footer">
       <p class="footer-text">Designed By Luke (c)2024</p>
     </footer>
