removed trailing hashes on elements and added alt attributes to all img elements

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       </header>
 
       <section class="article1">
-        <img class="article1_img" src="/Wireframe/git2.png">
+        <img class="article1_img" src="/Wireframe/git2.png" alt="a picture og the git logo on an orange background">
         <h2>What is Git?</h2>
         <p>
           Git is a free and open source distributed version control system
@@ -34,7 +34,7 @@
 
       <div class="section-container">
           <section class="article">
-            <img class="article2_img" src="/Wireframe/git1.png">
+            <img class="article2_img" src="/Wireframe/git1.png" alt="a picture os git logo on a white background">
           <h2>Why do Developers need Git?</h2>
           <p>
             Git is all about efficiency. For developers, it eliminates
@@ -50,7 +50,7 @@
           
         </section>
         <section class="article">
-          <img class="article3_img" src="/Wireframe/git3.png">
+          <img class="article3_img" src="/Wireframe/git3.png" alt="a picture of a git branch  showing master and other branches">
           <h2>What is a branch in Git?</h2>
           <p>
             Git branches are effectively a pointer to a snapshot of your
