Save local changes

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -16,23 +16,19 @@
 
     <main>
       <section>
-        <article>
-          <h2>What is Git?</h2>
+        <h2>What is Git?</h2>
         <p>Git is a distributed version control system that helps developers track changes in their code, collaborate with others, and maintain multiple versions of their projects.</p>
         <a href="#git-details" class="button">Read more</a>
-        </article>
-        
-       <article>
+      </section>
+      <section>
         <h2>Why do developers need Git?</h2>
         <p>Git allows developers to work in parallel, manage different features, and ensures that code integrity is maintained through version control.</p>
         <a href="#why-git" class="button">Read more</a>
-      </article>
-      
-        <article>
+      </section>
+      <section>
         <h2>What is a branch in Git?</h2>
         <p>A branch in Git is an independent line of development. Developers can create branches to work on new features without affecting the main codebase.</p>
         <a href="#branch" class="button">Read more</a>
-      </article>
       </section>
     </main>
 
