--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,7 +14,7 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
+    <header></header>
     <!-- try writing out the requirements first-->
   </form>
 
