--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,7 +14,8 @@
   </header>
   <main>
   <form>
-    <header></header>
+    <header> <h1>Product Pick</h1>
+    </header>
     <!-- try writing out the requirements first-->
   </form>
 
