added a main element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,7 +16,7 @@
   <form>
     <header> <h1>Product Pick</h1>
     </header>
-    <!-- try writing out the requirements first-->
+    <main></main>
   </form>
 
   </main>
