added a div class

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,7 +16,9 @@
   <form>
     <header> <h1>Product Pick</h1>
     </header>
-    <main></main>
+    <main>
+      <div class="wrapper">
+    </main>
   </form>
 
   </main>
