added a form element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -18,6 +18,8 @@
     </header>
     <main>
       <div class="wrapper">
+        <form id="product-form">
+        </div>
     </main>
   </form>
 
