added a label element with name

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -20,6 +20,7 @@
       <div class="wrapper">
         <form id="product-form">
         </div>
+        <label for="name">Name</label>
     </main>
   </form>
 
