added an input element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -19,8 +19,11 @@
     <main>
       <div class="wrapper">
         <form id="product-form">
-        </div>
+        <div>
         <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Your name should be 9-20 characters long">
+    </div>
+
     </main>
   </form>
 
