added a div element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -23,6 +23,7 @@
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="Your name should be 9-20 characters long">
     </div>
+    <div></div>
 
     </main>
   </form>
