added a label elemnt for email

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -23,7 +23,9 @@
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="Your name should be 9-20 characters long">
     </div>
-    <div></div>
+    <div>
+      <label for="email">Email</label>
+    </div>
 
     </main>
   </form>
