--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -25,6 +25,7 @@
     </div>
     <div>
       <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email address">
     </div>
 
     </main>
