--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -29,7 +29,9 @@
     </div>
     <div>
       <label for="t-shirtcolor">T-shirt Color</label>
-      <select></select>
+      <select name="t-shirtcolor" id="t-shirtcolor">
+        <option value="Red">Red</option>
+      </select>
     </div>
 
     </main>
