added a 2nd color option

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -31,6 +31,7 @@
       <label for="t-shirtcolor">T-shirt Color</label>
       <select name="t-shirtcolor" id="t-shirtcolor">
         <option value="Red">Red</option>
+        <option value="Yellow">Yellow</option>
       </select>
     </div>
 
