added a div element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -33,9 +33,9 @@
         <option value="Red">Red</option>
         <option value="Yellow">Yellow</option>
         <option value="green">green</option>
-
       </select>
     </div>
+    <div></div>
 
     </main>
   </form>
