1st option elemnt

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -37,7 +37,9 @@
     </div>
     <div> 
     <label for="tshirtsize">T-shirt Size</label>
-    <select name="tshirtsize" id="tshirtsize"></select>
+    <select name="tshirtsize" id="tshirtsize">
+     <option value="XS">XS</option>
+    </select>
 
     </div>
 
