2nd option element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -39,6 +39,7 @@
     <label for="tshirtsize">T-shirt Size</label>
     <select name="tshirtsize" id="tshirtsize">
      <option value="XS">XS</option>
+     <option value="S">S</option>
     </select>
 
     </div>
