5th option element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -42,6 +42,7 @@
      <option value="S">S</option>
      <option value="M">M</option>
      <option value="L">L</option>
+     <option value="XL">XL</option>
 
     </select>
 
