6th option solution

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -43,7 +43,8 @@
      <option value="M">M</option>
      <option value="L">L</option>
      <option value="XL">XL</option>
-     
+     <option value="XXL">XXL</option>
+
 
     </select>
 
