added a div element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -44,11 +44,10 @@
      <option value="L">L</option>
      <option value="XL">XL</option>
      <option value="XXL">XXL</option>
-
-
     </select>
-
     </div>
+
+    <div></div>
 
     </main>
   </form>
