added a label element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -46,8 +46,10 @@
      <option value="XXL">XXL</option>
     </select>
     </div>
+    <label for="delivery-date">Please enter the delivery date (YYYY-MM-DD):</label>
+    <div>
 
-    <div></div>
+    </div>
 
     </main>
   </form>
