added an input element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -47,6 +47,7 @@
     </select>
     </div>
     <label for="delivery-date">Please enter the delivery date (YYYY-MM-DD):</label>
+    <input type="date" id="delivery-date" required>
     <div>
 
     </div>
