added a p elemnt for error message

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -48,6 +48,9 @@
     </div>
     <label for="delivery-date">Please enter the delivery date (YYYY-MM-DD):</label>
     <input type="date" id="delivery-date" required>
+    <p id="error-msg"></p>
+    
+
     <div>
 
     </div>
