added a p element for success message

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -49,6 +49,7 @@
     <label for="delivery-date">Please enter the delivery date (YYYY-MM-DD):</label>
     <input type="date" id="delivery-date" required>
     <p id="error-msg"></p>
+    <p id="success-msg"></p>
     
 
     <div>
