added a submit button

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -46,16 +46,15 @@
      <option value="XXL">XXL</option>
     </select>
     </div>
-    <label for="delivery-date">Please enter the delivery date (YYYY-MM-DD):</label>
-    <input type="date" id="delivery-date" required>
-    <p id="error-msg"></p>
-    <p id="success-msg"></p>
-    
-
+  
+  
     <div>
-
+      <label for="delivery-date">Please enter the delivery date (YYYY-MM-DD):</label>
+      <input type="date" id="delivery-date" required>
+      <p id="error-msg"></p>
+      <p id="success-msg"></p>
     </div>
-
+    <button id="submit-btn">Submit</button>
     </main>
   </form>
 
