added form elements, name, email, color choice and size options

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,12 +16,41 @@
   <form>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
+    <div>
+    <label>Name: </label><input id="name" placeholder="Your name" required>
+    </div>
+    <div>
+    <label>Email: </label><input id="email" type="email" placeholder="Your email" required>
+    </div>
+    <div>
+    <p>Please select your favorite color</p>
+    <input type="radio" id="red" name="color" value="red">
+    <label>Red</label><br>
+    <input type="radio" id="green" name="color" value="green">
+    <label>Green</label><br>
+    <input type="radio" id="blue" name="color" value="blue">
+    <label>Blue</label><br>
+    </div>
+    <div>
+      <label>Choose a size</label>
+      <select name="size" id="size">
+        <option value="select">Select a size</option>
+        <option value="extra_small">XS</option>
+        <option value="small">S</option>
+        <option value="medium">M</option>
+        <option value="large">L</option>
+        <option value="extra_large">L</option>
+        <option value="extra_extra_large">XXL</option>
+
+      </select>
+    </div>
+
   </form>
 
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Luke Manyamazi</h2>
   </footer>
 </body>
 
