--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -39,7 +39,7 @@
         <option value="small">S</option>
         <option value="medium">M</option>
         <option value="large">L</option>
-        <option value="extra_large">L</option>
+        <option value="extra_large">XL</option>
         <option value="extra_extra_large">XXL</option>
 
       </select>
